@@ -1,6 +1,10 @@
 ispCP ω 1.0.3 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2009-11-18 Laurent Declercq
+	- GUI:
+		* Fixed #1725: /var/log/rkhunter.log not readable (AGAIN)
+
 2009-11-17 Benedikt Heintel
 	- GUI:
 		* Corrected spelling mistake
@@ -8,7 +12,7 @@ ispCP ω 1.0.3 Changelog
 
 2009-11-17 Laurent Declercq
 	- SETUP:
-		* Deleting of several sql files that are not longer needed
+		* Deleted several sql files that are not longer needed
 
 2009-11-16 Benedikt Heintel
 	- GUI:
